2005-05-12  Alasdair Allan <aa@astro.ex.ac.uk>

         * Fixed modules to parse Declination with or without a plus sign
           to denote positive declination. All documents are now built with
           such a sign to placte the hoardes at LJM.
           
2005-05-05  Alasdair Allan <aa@astro.ex.ac.uk>

         * Parse.pm: Added parsing methods for <TimeConstraint> tags.
         
         * Build.pm: Modified how the PT is pre-pended to the <Interval>
           and <Tolerance> tags so it can't be added more than once.
         
2005-05-04  Alasdair Allan <aa@astro.ex.ac.uk>

         * Added support for <Count> tag inside <Exposure> along with
           the <TimeConstraint> and <SeriesConstraint> tags.

2005-02-08  Alasdair Allan <aa@astro.ex.ac.uk>

         * Changed things so that we can now specify both the "type" and "ident"
           attributes of the <Target> tag.
           
2005-02-07  Alasdair Allan <aa@astro.ex.ac.uk>

         * Build.pm & Parse.pm: Added targettype() method so we can now 
           specify the TargetType attribute in the <Target type=""></Target>
           tag.
           
         * t/parse.t & t/build.t: Tested this new tag.
          
2003-07-21  Alasdair Allan <aa@astro.ex.ac.uk>

         * Build.pm: Added failure_response(), update_response() and
           complete_response() messages.
           
2003-07-20  Alasdair Allan <aa@astro.ex.ac.uk>

         * Build.pm: Added reject_response() and confirm_response()
                   
2003-07-16  Alasdair Allan <aa@astro.ex.ac.uk>

         * Added filter support
         
2003-07-15  Alasdair Allan <aa@astro.ex.ac.uk>

         * Build.pm: Added score_response() method to generate a scoring
           response message.
           
         * Parse.pm: Added port() and host() methods to retrieve the
           originiating host and port from a parsed RTML message
             
2003-06-27  Alasdair Allan <aa@astro.ex.ac.uk>
